# Nico-Robin-Managment-Bot-ACN

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  PLAN.md  apply_black.py  check_feature_gates.py  code_review_request.md  config.py  database.py  database_migration_validator.py  init_database.py  main.py  memory.md  patch_acn_service.py  patch_decorators.py  patch_handlers_list.py  plan.txt  pyproject.toml  pyrightconfig.json  railway.json  render.yaml  requirements.txt  run_black.py  run_services.py  update_memory.sh  wrangler.toml
.claude/: settings.local.json
alembic/: env.py
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  render.yaml
backend/migrations/: 001_create_groups.sql  002_create_notes.sql  003_create_filters.sql  004_create_warnings.sql  005_create_welcome.sql  006_create_profiles.sql  007_create_swears.sql  008_create_federations.sql  009_create_features.sql  010_create_flood.sql
backend/src/: main.rs
backend/src/auth/: flood_tracker.rs  mod.rs  rate_limiter.rs  redactor.rs  validator.rs
backend/src/config/: mod.rs
backend/src/db/: features.rs  federations.rs  filters.rs  flood.rs  groups.rs  mod.rs  notes.rs  profiles.rs  swears.rs  warnings.rs  welcome.rs
backend/src/entities/: mod.rs
backend/src/handlers/: core.rs  features.rs  federation.rs  filters.rs  mod.rs  moderation.rs  notes.rs  profile.rs  security.rs  welcome.rs
backend/src/utils/: logging.rs  mod.rs
bot/: app.py  dispatcher.py
client/: websocket_client.py
cloudflared/: config.yml
config/: docker-compose.yml  render.yaml  requirements.txt
core/: __init__.py  decorators.py  logging.py
docs/: 01_runtime_map.md  02_command_matrix.md  03_render_env.md  AGENTS.md  FEATURES.md  MEMORY.md  README.md  audit-baseline.md
gateway/: webhook.py  websocket.py
models/: __init__.py  bot_friendship.py  event.py  features.py  flirting.py  group.py  loyalty.py  managed_channel.py  points.py  profile.py  swear_word.py  user.py
modules/: start.py  welcome.py
scripts/: init_database.py  init_schema.py  run_services.py
services/: acn_service.py  bot_friendship_service.py  broadcast_service.py  event_service.py  feature_service.py  flirting_service.py  group_service.py  llm_gateway.py  point_service.py  profile_service.py  security_logger.py  swear_word_service.py
utils/: logging.py  (+3 more)
(+120 files in other folders)
