[package]
name = "nico_robin_bot"
version = "0.2.0"
edition = "2021"
authors = ["johan-droid <sahooashutosh2022@gmail.com>"]

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
teloxide = { version = "0.12", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.24.0", features = ["v4"] }
